k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-deployment
  labels:
    app: ventas

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ventas

  template:
    metadata:
      labels:
        app: ventas

    spec:
      containers:
        - name: ventas
          image: 574478061268.dkr.ecr.us-east-1.amazonaws.com/backend-ventas:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /swagger-ui.html
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
