k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ventas-service
spec:
  selector:
    app: ventas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
