k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ventas-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /ventas
            pathType: Prefix
            backend:
              service:
                name: ventas-service
                port:
                  number: 8080
